Lighthouse 100s update. Fix footer contrast, SEO and best practices updates. Bumped JQuery to 3.5.1

--- a/_sass/06_components/footer.scss
+++ b/_sass/06_components/footer.scss
@@ -11,7 +11,6 @@
 
   p {
     font-size: .9em;
-    opacity: 0.5;
     width: 100%;
   }
 
